WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129392
REGRESSION(
r164690
) Keyboard keeps showing up when clicking links.
https://bugs.webkit.org/show_bug.cgi?id=129392
Summary
REGRESSION(r164690) Keyboard keeps showing up when clicking links.
Enrica Casucci
Reported
2014-02-26 14:18:19 PST
Easy to reproduce using Wikipedia.
Attachments
Patch
(1.43 KB, patch)
2014-02-26 14:19 PST
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-02-26 14:19:38 PST
Created
attachment 225298
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-26 14:21:52 PST
Attachment 225298
[details]
did not pass style-queue: ERROR: Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 3
2014-02-26 14:25:47 PST
Committed revision 164750.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug