Keyboard keeps showing up when clicking links after being shown once. https://bugs.webkit.org/show_bug.cgi?id=129392

Reviewed by Benjamin Poulain.

This is a regression introduced by http://trac.webkit.org/changeset/164690.
_requiresKeyboardWhenFirstResponder should always return NO, if there is
no assisted node.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _requiresKeyboardWhenFirstResponder]):



Canonical link: https://commits.webkit.org/147444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164750 268f45cc-cd09-0410-ab3c-d52691b4dbfc